Add(image): logo and favicon

--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
     <meta name="description" content="Newrare - Créateur d'applications mobiles innovantes">
     <title>Newrare - Applications Mobiles</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="./image/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./image/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./image/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="./image/favicon.ico">
 </head>
 
 <body>
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <div class="logo">Newrare</div>
+            <a href="#home" class="logo-link">
+                <img src="./image/apple-touch-icon.png" alt="Newrare Logo" class="nav-logo">
+                <span class="brand-name">Newrare</span>
+            </a>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#home" data-fr="Accueil" data-en="Home"></a></li>
                 <li><a href="#apps" data-fr="Applications" data-en="Apps"></a></li>
@@ -213,7 +220,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Newrare. <span data-fr="Tous droits réservés." data-en="All rights reserved."></span></p>
+            <p>&copy; <span id="year"></span> Newrare. <span data-fr="Tous droits réservés." data-en="All rights reserved."></span></p>
         </div>
     </footer>
 
